fix user wise access  and tickets
